Added a wifi connection page

--- a/EnergyControl/EnergyControlMaui/EnergyControlMaui.csproj
+++ b/EnergyControl/EnergyControlMaui/EnergyControlMaui.csproj
@@ -51,7 +51,7 @@
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" />
 		<MauiIcon Include="Resources\AppIcon\appiconfg.svg" />
-		<MauiIcon Include="Resources\AppIcon\logo_splash.svg" />
+		<MauiSplashScreen Include="Resources\AppIcon\logo_splash.svg" BaseSize="128,128"/>
 		<MauiImage Include="Resources\Icons\account_ic.svg" />
 		<MauiImage Include="Resources\Icons\automation_ic.svg" />
 		<MauiImage Include="Resources\Icons\home_ic.svg" />
@@ -60,7 +60,6 @@
 
 		<!-- Splash Screen -->
 		<!--<MauiSplashScreen Include="Resources\Splash\mysplash.svg" Color="#24293E" BaseSize="128,128" /> -->
-		<MauiSplashScreen Include="Resources\Splash\logo_splash.svg" Color="#24293E" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
@@ -77,17 +76,22 @@
 	  <AndroidResource Remove="Resources\Images\bubble.png" />
 	</ItemGroup>
 
-	<ItemGroup>
+	<!--<ItemGroup>
 	  <MauiImage Remove="Resources\Images\security_btn.svg" />
-	</ItemGroup>
+	</ItemGroup>-->
+
+	<!--<ItemGroup>
+	  <MauiXaml Remove="Views\WifiCredentialsPage.xaml" />
+	</ItemGroup>-->
 
 
 	<ItemGroup>
 	  <None Remove="Platforms\Android\Resources\drawable\ichidepassword.png" />
 	  <None Remove="Platforms\Android\Resources\drawable\icshowpassword.png" />
+	  <None Remove="Resources\AppIcon\logo_splash.svg" />
+	  <None Remove="Resources\Images\security_btn.svg" />
 	  <None Remove="Resources\AppIcon\appicon.svg" />
 	  <None Remove="Resources\AppIcon\appiconfg.svg" />
-	  <None Remove="Resources\AppIcon\logo_splash.svg" />
 	  <None Remove="Resources\Fonts\interlight.otf" />
 	  <None Remove="Resources\Fonts\intermedium.otf" />
 	  <None Remove="Resources\Fonts\interregular.otf" />
@@ -121,7 +125,6 @@
 	  <None Remove="Resources\Raw\printer_btn.svg" />
 	  <None Remove="Resources\Raw\robot.svg" />
 	  <None Remove="Resources\Raw\thermostat_btn.svg" />
-	  <None Remove="Resources\Splash\logo_splash.svg" />
 	  <None Remove="Resources\Splash\mysplash.svg" />
 	</ItemGroup>
 
@@ -153,10 +156,15 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
 	</ItemGroup>
-
+	
+		
 	<ItemGroup>
 		<Compile Update="App.xaml.cs">
 			<DependentUpon>%(Filename)</DependentUpon>
+		</Compile>
+		<Compile Update="Views\WifiConnectionPage.xaml.cs">
+			<SubType>Code</SubType>
+			<DependentUpon>WifiConnectionPage.xaml</DependentUpon>
 		</Compile>
 	  <Compile Update="Views\LoginPage.xaml.cs">
 	    <SubType>Code</SubType>
@@ -213,6 +221,9 @@
 		<None Update="Views\HomeConnectionPage.xaml">
 			<Generator>MSBuild:Compile</Generator>
 		</None>
+	  <None Update="Views\WifiConnectionPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </None>
 	  <None Update="Views\SignupPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </None>
@@ -235,6 +246,18 @@
 	<ItemGroup>
 	  <Folder Include="ViewModels\" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Views\WifiConnectionPage.xaml">
+	    <Generator></Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<!--<ItemGroup>
+	  <MauiXaml Update="Views\WifiCredentialsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>-->
 
 	<!--<ItemGroup>
 	  <MauiSplashScreen Include="Resources\Splash\logo_splash.svg" />
